# kdocs

./: README.md  pda  sgml
axtu-debug/: README
axtu-debug/all-older/73/: 73-history  73.c  73_2.c  73_3.c  gloria-mt.sh  hwanii-scrip.c  mtt_load_sys.sh  rpm-crash.c  rpmtsRun.c  tar-os.c  test-RC.c
axtu-debug/all-older/IP-diff/: 1005.diff  1015.diff  1044.diff  1047.diff  1070.diff  1084.diff  1105.diff  1158.diff  967.diff  README  (+2 more)
axtu-debug/auth-client/: 1.c
axtu-debug/blacklist/: 1.c
axtu-debug/kmod-redcastle-PAE/: 2debug.c  NOTE  debug.c  error.c  pam_app  usage.c
axtu-debug/noarch/: 1.c  2.c
axtu-debug/obselete-tag/: 10warning-message.c  9dhcp-devel.c  README  bz_bugs.c  plan.c  problems.c  sent-ip  todo.c  trival.c
axtu-debug/pid/: 1.c  2axtu.c  3solution.c  check.sh
axtu-debug/self-update/: 2hwanii-solu.c  3jun-solu.c  4simple.c  5flow.c  6debug.c  7list.c  self-update.c
doc-axtu/: README  introduction  port
doc-axtu/auth-client/: 1.c
doc-axtu/axkeygen/: 4zhuyu.c  choi_letter.muse
doc-axtu/axtu/: corn.c  obsolete.c  successlog.c
doc-axtu/bugs/: make_install.c
doc-axtu/html-axtu/: about_this_doc.html  ak.html  auth_mysql.html  axtu_steps.html  basics.html  blacklist.html  clone155.html  customerdb.html  db.html  how_axtu_us_aktk.html  hwanii_auth.html  i18n.html  index.deb  index.html  index.html~  on_yum.html  open_auth_area.html  temp_key.html  tips.html
doc-axtu/wtec/: tailand_url
linux/: arch.c  docbook_study  dual-boot.c  find.c  gcc.c  libso.c  make  patch.c  ssh.c  suse9.c  tips.c  vim.c
linux/asianux/: firefox.c  flash.c  openoffice.c  pdfviewer.c  printer.c  vnc.c  xen-install.c  xen.c  xterm.c
linux/autoconf/: 1.c  2hello.c  3axtu.c  4hellorpm.c  5static.c  authen-client.c
linux/autoconf/authen-client/ac/: AC_CONFIG_FILE.c  AC_INIT.c  AC_MSG_NOTICE.c  AM_INIT_AUTOMAKE.c  PREREQ.c  config.h  configure.ac  others.c  whole.c
linux/autoconf/others/hellorpm/: Makefile.am  configure.ac  hellorpm.c
linux/bash/: 1.sh  awk.sh  bash.sh  command.sh  for.sh  getinput.sh  getopts.sh  tee.sh  until.sh  write_log.sh
linux/docbook/: .docbook_study.swp  article.xml  b.sh  book.xml  docbook_study  installation.c  tips.c
linux/fedora/: 1.c  2yum.c
linux/git/: 1.c  2.c  git-svn.c  github.c  install.c  my-patch.txt  problem.c
linux/ubuntu/: .iso.c.swp  1.c  8.04.c  Qt_install  UpgradeOS  fomat_disk.c  gcc.c  gnomebaker--v0.1  httpd.c  intall_VM_in_ubuntu--v0.1  minicom.html  openoffice  short-cuts.c  u-disk.c  ubuntu8.04_installation--v0.1  virtualbox.c  vmware-server.c  wget  xterm
linux/vim/: TOhtml  compound  delete  general  goto  symbols  yank
others/arm/: arm+nfs.html  arm_sz.html  ftp--v0.1  telenet_ARM--v0.1  vivi compilation--v0.1  vmware+fedora4=nfs_success--v0.1
others/books/: 1.c
others/dirary/: index.html
others/hardware/: route_details--v0.1  sch_details_ext_board--v0.1
others/lists/: best_books.c  data_backup.c  disk_content.c  my_printed_books
others/peter_cv/: billie.html  redfish
others/spi/: Pull-up resistor--v0.1
petu/: creatrepo.c  intro.c  rm_auth.c  wget.c
sf/: 1.c  2.c  command.sh  error.e  mailing-list.c  more-git-repo.c  release.c  svn-to-git.howto  tinylion-dev.c  trac.c  trac_backup.c  vivion-init.c
sf/gimp/: 1.c
sf/tinylion-oldweb/: download.html  index.html  svn.html  tata_guide  tinylion.html
sf/tinylion_website/: history.html
study/: network
study/apt-rpm/: 1.c
study/c/: 1.c  aumaticvirable.c  defined.c  enmu.cc  html_maker6.c  insert.cpp  returnstring.c  s.c  sprintf.c  vector.cpp
study/doc-howto/: doxygen  doxygen.c  dream  html.c  wiki
study/html/: html.c
study/jhtu/: 1.c  DealwithDependence.diff  hwanii-letter.c
study/python/: 1.py  problems  web_dev
study/qt/: 1.c  paint.c  port_aclock_arm  sdk.c
study/reading/: Eric
study/rpm/: changes.c  error.c  header.c  hello1.spec  minirpm.c  note.c  rpm.c  start.c
study/yum/: 6yum-arch.c  plugin.c
tinylion-doc/: README  bill.txt  minicom.c
tinylion-doc/arm/: yaffs_success-v0.1
tinylion-doc/driver/: index.html
tinylion-doc/hardware/: sister_board_tip.c  two_boards--v0.1
tinylion-doc/tinylion_website/: index.html
work/: IP_we_need  MUST  NOTE  approval  axtu_working_copy  info  pirek-axtu.c  sds.c  sent-ip.c  svn.c  the_way_I_work.c  tmp  voip
yum/: 1.c  2creatrepo.c  3.packagekit  4good.c  5.c  NOTE  download.c  hwanii-ppt  kernel.c  plugin.c  ubutnu.c  unclassified
yum/add_auth/: auth_client.html  open_auth_mysql_area.html
yum/obsolete/: 2.c
(+286 files in other folders)
